# cShark

./: .gitignore  CMakeLists.txt  Makefile  README  project.conf
cShark/: AbstractSVMDataModel.h  DataModelContainer.cpp  KernelSGD.cpp  KernelSGD.fwd.h  KernelSGD.h  LIBSVMModelWriter.cpp  LIBSVMModelWriter.fwd.h  LIBSVMModelWriter.h  LibSVMDataModel.cpp  LinearSVM.cpp  LinearSVM.fwd.h  LinearSVM.h  Plugin.cpp  Plugin.h  SharkKernelSGDOnlineTrainer.h  SharkSVM.h  SharkSVMConfig.h  SharkSparseData.h  SimpleSummation.cpp  SparseData.cpp  SparseData.fwd.h  SparseData.h  SparseDataPlugin.cpp  cShark.h
cShark/SharkSVM/: DataModelContainer.cpp  DataModelContainer.h  LabelOrder.h  LibSVMDataModel.cpp  LibSVMDataModel.h  SharkSVM.h
cmakeModules/: FindShark.cmake
